--- a/misiones.css
+++ b/misiones.css
@@ -53,7 +53,7 @@ body {
     width: 100%;
     height: 100%;
     margin-bottom: 40px;
-    border: 2px solid #8B4513;
+    border: 2px solid black;
     border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
